--- a/apps/tetris-web/web/tetris.html
+++ b/apps/tetris-web/web/tetris.html
@@ -797,7 +797,7 @@
     }
 
     const query = new URLSearchParams(window.location.search);
-    const apiBase = (query.get('apiBase') || `${window.location.protocol}//${window.location.hostname}:8080`).replace(/\/+$/, '');
+    const apiBase = (query.get('apiBase') || `${window.location.origin}`).replace(/\/+$/, '');
 
     function apiURL(path) {
       const normalized = path.startsWith('/') ? path : `/${path}`;
@@ -1162,7 +1162,7 @@
         default:
           break;
       }
-      // Push an immediate snapshot after agent action so /state stays close to UI.
+      // Push an immediate snapshot after agent action for room stream sync.
       sendRoomInput('state_sync', {
         board: snapshotBoard(),
         score,
