--- a/apps/social-web/web/index.html
+++ b/apps/social-web/web/index.html
@@ -6,164 +6,57 @@
   <title>ClawdCity Social</title>
   <style>
     :root {
-      --bg: #f4f5f7;
+      --bg: #f3f5f8;
+      --bg-soft: #eef2f7;
       --panel: #ffffff;
       --ink: #0f172a;
       --muted: #64748b;
       --line: #e2e8f0;
-      --accent: #2563eb;
-      --accent-soft: #dbeafe;
+      --brand: #2563eb;
+      --brand-soft: #dbeafe;
       --danger: #dc2626;
+      --radius: 14px;
+      --shadow: 0 12px 32px rgba(15, 23, 42, 0.08);
     }
     * { box-sizing: border-box; }
     body {
       margin: 0;
-      font-family: "Inter", "SF Pro Text", "Segoe UI", sans-serif;
-      background: radial-gradient(circle at top left, #ffffff, var(--bg));
+      min-height: 100vh;
       color: var(--ink);
-      min-height: 100vh;
+      font-family: "Inter", "SF Pro Text", "Segoe UI", sans-serif;
+      background:
+        radial-gradient(circle at top right, #ffffff 0, #f4f7ff 26%, transparent 42%),
+        linear-gradient(145deg, #f8fafc, var(--bg));
     }
-    .init-shell {
-      min-height: 100vh;
-      display: grid;
-      place-items: center;
-      padding: 24px;
-    }
-    .init-card {
-      width: min(720px, 100%);
-      background: var(--panel);
-      border: 1px solid var(--line);
-      border-radius: 16px;
-      padding: 22px;
-      box-shadow: 0 20px 40px rgba(15, 23, 42, .08);
-    }
-    .grid-two {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      gap: 12px;
-    }
-    .app-shell {
-      display: grid;
-      grid-template-columns: 320px 1fr;
-      min-height: 100vh;
-    }
-    .sidebar {
-      border-right: 1px solid var(--line);
-      background: #fff;
-      display: grid;
-      grid-template-rows: auto 1fr auto;
-    }
-    .sidebar-head {
-      padding: 16px;
-      border-bottom: 1px solid var(--line);
-    }
-    .sidebar-body {
-      padding: 12px;
-      overflow: auto;
-      display: grid;
-      gap: 14px;
-      align-content: start;
-    }
-    .sidebar-foot {
-      border-top: 1px solid var(--line);
-      padding: 12px;
-      font-size: 12px;
-      color: var(--muted);
-    }
-    .main {
-      display: grid;
-      grid-template-rows: auto 1fr auto;
-      background: #f8fafc;
-    }
-    .main-head {
-      padding: 14px 16px;
-      border-bottom: 1px solid var(--line);
-      background: #fff;
-      display: flex;
-      justify-content: space-between;
-      gap: 8px;
-      align-items: center;
-    }
-    .chat-stream {
-      padding: 16px;
-      overflow: auto;
-      display: grid;
-      gap: 10px;
-      align-content: start;
-    }
-    .chat-input {
-      border-top: 1px solid var(--line);
-      background: #fff;
-      padding: 12px;
-      display: flex;
-      gap: 10px;
-      align-items: center;
-    }
-    .bubble {
-      max-width: min(70%, 680px);
-      border: 1px solid var(--line);
-      border-radius: 14px;
-      padding: 10px 12px;
-      background: #fff;
-      font-size: 14px;
-      line-height: 1.45;
-      white-space: pre-wrap;
-      word-break: break-word;
-    }
-    .bubble.me {
-      margin-left: auto;
-      background: var(--accent-soft);
-      border-color: #bfdbfe;
-    }
-    .meta {
-      margin-top: 4px;
-      font-size: 11px;
-      color: var(--muted);
-    }
-    .block {
-      border: 1px solid var(--line);
-      border-radius: 12px;
-      background: #fff;
-      overflow: hidden;
-    }
-    .block h4 {
-      margin: 0;
-      padding: 10px 12px;
-      border-bottom: 1px solid var(--line);
-      font-size: 12px;
-      letter-spacing: .06em;
-      text-transform: uppercase;
-      color: var(--muted);
-    }
-    .list { display: grid; }
-    .friend-item, .req-item {
-      border: 0;
-      border-bottom: 1px solid var(--line);
-      background: #fff;
-      text-align: left;
-      padding: 10px 12px;
-      cursor: pointer;
-      width: 100%;
-    }
-    .friend-item:last-child, .req-item:last-child { border-bottom: 0; }
-    .friend-item.active { background: #eff6ff; }
+    .hidden { display: none !important; }
+    .muted { color: var(--muted); }
+    .mono { font-family: Menlo, monospace; font-size: 12px; word-break: break-all; }
+    .row { display: flex; gap: 8px; align-items: center; }
+
     input, textarea {
       width: 100%;
       border: 1px solid var(--line);
       border-radius: 10px;
-      padding: 10px;
-      font: inherit;
+      padding: 10px 12px;
       background: #fff;
+      font: inherit;
+      color: var(--ink);
     }
-    textarea { resize: vertical; min-height: 92px; }
+    input:focus, textarea:focus {
+      outline: none;
+      border-color: #bfd5ff;
+      box-shadow: 0 0 0 3px rgba(37, 99, 235, 0.14);
+    }
+    textarea { resize: vertical; min-height: 86px; }
     button {
       border: 0;
-      background: var(--accent);
-      color: #fff;
       border-radius: 10px;
       padding: 10px 14px;
       font: inherit;
       cursor: pointer;
+      background: var(--brand);
+      color: #fff;
+      white-space: nowrap;
     }
     button.secondary {
       background: #fff;
@@ -171,46 +64,186 @@
       border: 1px solid var(--line);
     }
     button.danger { background: var(--danger); }
-    .row { display: flex; gap: 8px; }
-    .muted { color: var(--muted); }
-    .mono { font-family: Menlo, monospace; font-size: 12px; word-break: break-all; }
-    .hidden { display: none !important; }
+
+    .init-shell {
+      min-height: 100vh;
+      display: grid;
+      place-items: center;
+      padding: 24px;
+    }
+    .init-card {
+      width: min(760px, 100%);
+      background: var(--panel);
+      border: 1px solid var(--line);
+      border-radius: 20px;
+      box-shadow: var(--shadow);
+      padding: 24px;
+    }
+    .init-head h1 { margin: 0; font-size: 28px; }
+    .init-head p { margin: 6px 0 0; color: var(--muted); }
+    .grid-two {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 12px;
+      margin-top: 16px;
+    }
+    .init-actions { margin-top: 16px; display: flex; gap: 8px; }
+
+    .app-shell {
+      min-height: 100vh;
+      display: grid;
+      grid-template-columns: 330px 1fr;
+      gap: 0;
+    }
+    .left {
+      border-right: 1px solid var(--line);
+      background: #fff;
+      display: grid;
+      grid-template-rows: auto 1fr;
+      min-height: 100vh;
+    }
+    .left-head {
+      padding: 16px;
+      border-bottom: 1px solid var(--line);
+      background: linear-gradient(180deg, #fff, #f9fbff);
+    }
+    .left-head .title { font-weight: 700; }
+    .left-head .idline { font-size: 12px; color: var(--muted); margin-top: 4px; }
+    .left-body {
+      overflow: auto;
+      padding: 12px;
+      display: grid;
+      gap: 12px;
+      align-content: start;
+      background: #fcfdff;
+    }
+    .card {
+      background: #fff;
+      border: 1px solid var(--line);
+      border-radius: var(--radius);
+      overflow: hidden;
+    }
+    .card-title {
+      margin: 0;
+      padding: 10px 12px;
+      font-size: 11px;
+      letter-spacing: .08em;
+      text-transform: uppercase;
+      color: var(--muted);
+      border-bottom: 1px solid var(--line);
+      background: #fafcff;
+    }
+    .list { display: grid; }
+    .friend-item, .req-item {
+      border: 0;
+      border-bottom: 1px solid var(--line);
+      background: #fff;
+      text-align: left;
+      padding: 11px 12px;
+      width: 100%;
+      cursor: pointer;
+    }
+    .friend-item:last-child, .req-item:last-child { border-bottom: 0; }
+    .friend-item.active { background: #eff6ff; }
+    .friend-item .name { font-weight: 600; font-size: 14px; }
+    .friend-item .sub { font-size: 12px; color: var(--muted); margin-top: 2px; }
+
+    .main {
+      display: grid;
+      grid-template-rows: auto 1fr auto;
+      min-height: 100vh;
+      background:
+        radial-gradient(circle at 10% 10%, rgba(255, 255, 255, 0.8), transparent 30%),
+        linear-gradient(160deg, var(--bg-soft), #f8fafc 40%, #eef2f7);
+    }
+    .main-head {
+      padding: 14px 18px;
+      border-bottom: 1px solid var(--line);
+      background: rgba(255, 255, 255, 0.9);
+      backdrop-filter: blur(8px);
+      display: flex;
+      justify-content: space-between;
+      gap: 12px;
+      align-items: center;
+    }
+    .head-title { font-weight: 700; font-size: 18px; }
+    .head-sub { font-size: 12px; color: var(--muted); margin-top: 2px; }
+
+    .chat-stream {
+      overflow: auto;
+      padding: 18px;
+      display: grid;
+      gap: 10px;
+      align-content: start;
+    }
+    .bubble {
+      max-width: min(72%, 720px);
+      border-radius: 14px;
+      border: 1px solid var(--line);
+      background: #fff;
+      padding: 10px 12px;
+      line-height: 1.45;
+      font-size: 14px;
+      white-space: pre-wrap;
+      word-break: break-word;
+      box-shadow: 0 4px 12px rgba(15, 23, 42, 0.04);
+    }
+    .bubble.me {
+      margin-left: auto;
+      background: var(--brand-soft);
+      border-color: #bfdbfe;
+    }
+    .meta { margin-top: 4px; font-size: 11px; color: var(--muted); }
+
+    .composer {
+      border-top: 1px solid var(--line);
+      background: rgba(255, 255, 255, 0.95);
+      backdrop-filter: blur(8px);
+      padding: 12px;
+      display: grid;
+      grid-template-columns: 1fr auto;
+      gap: 10px;
+    }
+
     @media (max-width: 980px) {
       .grid-two { grid-template-columns: 1fr; }
       .app-shell { grid-template-columns: 1fr; }
-      .sidebar { border-right: 0; border-bottom: 1px solid var(--line); }
+      .left { min-height: auto; border-right: 0; border-bottom: 1px solid var(--line); }
       .bubble { max-width: 92%; }
+      .main-head { flex-direction: column; align-items: stretch; }
     }
   </style>
 </head>
 <body>
   <section id="initView" class="init-shell hidden">
     <div class="init-card">
-      <h1 style="margin:0 0 4px;">Welcome to ClawdCity Social</h1>
-      <div class="muted" style="margin-bottom:14px;">Initialize your profile once, then enter chat. Direct messages and friend requests are encrypted.</div>
+      <div class="init-head">
+        <h1>Set Up Your Social Profile</h1>
+        <p>One-time setup. After initialization, you'll enter the main chat workspace directly.</p>
+      </div>
       <div class="grid-two">
         <div>
           <label>Username</label>
-          <input id="initUsername" placeholder="Your name" />
+          <input id="initUsername" placeholder="Your display name" />
         </div>
         <div>
           <label>Passphrase</label>
-          <input id="initPassphrase" type="password" placeholder="Used to unlock local key" />
+          <input id="initPassphrase" type="password" placeholder="Unlock local key" />
         </div>
       </div>
       <div style="margin-top:10px;">
         <label>Bio</label>
-        <textarea id="initBio" placeholder="Short intro"></textarea>
+        <textarea id="initBio" placeholder="A short intro"></textarea>
       </div>
       <div style="margin-top:10px;">
         <label>Avatar (data URL, optional)</label>
         <textarea id="initAvatar" placeholder="data:image/png;base64,..."></textarea>
       </div>
-      <div class="row" style="margin-top:10px;align-items:center;">
+      <div class="row" style="margin-top:10px;">
         <label><input type="checkbox" id="initDiscoverable" checked /> Discoverable</label>
         <label><input type="checkbox" id="initAllowStranger" checked /> Allow stranger requests</label>
       </div>
-      <div class="row" style="margin-top:14px;">
+      <div class="init-actions">
         <button onclick="submitInit()">Initialize</button>
         <button class="secondary" onclick="submitUnlock()">Unlock Existing</button>
       </div>
@@ -219,59 +252,57 @@
   </section>
 
   <section id="mainView" class="app-shell hidden">
-    <aside class="sidebar">
-      <div class="sidebar-head">
-        <div style="font-weight:700;">ClawdCity Social</div>
-        <div id="meLine" class="muted" style="font-size:12px;margin-top:4px;">-</div>
+    <aside class="left">
+      <div class="left-head">
+        <div class="title">ClawdCity Social</div>
+        <div id="meLine" class="idline">-</div>
       </div>
-      <div class="sidebar-body">
-        <div class="block">
-          <h4>Friends</h4>
+      <div class="left-body">
+        <section class="card">
+          <h3 class="card-title">Friends</h3>
           <div id="friendList" class="list"></div>
-        </div>
+        </section>
 
-        <div class="block">
-          <h4>Friend Requests</h4>
+        <section class="card">
+          <h3 class="card-title">Requests</h3>
           <div id="requestList" class="list"></div>
-        </div>
+        </section>
 
-        <div class="block">
-          <h4>Config</h4>
+        <section class="card">
+          <h3 class="card-title">Config</h3>
           <div style="padding:10px 12px;display:grid;gap:8px;">
             <label><input type="checkbox" id="cfgDiscoverable" /> Discoverable</label>
             <label><input type="checkbox" id="cfgAllowStranger" /> Allow stranger requests</label>
             <button class="secondary" onclick="saveConfig()">Save Config</button>
+            <input id="discoverTarget" placeholder="User ID to add" />
+            <button class="secondary" onclick="sendRequestByUserID()">Add Friend</button>
             <button class="secondary" onclick="createInvite()">Create Invite</button>
             <textarea id="inviteToken" class="mono" placeholder="Invite token"></textarea>
             <textarea id="inviteInput" class="mono" placeholder="Paste invite token"></textarea>
             <input id="inviteMessage" placeholder="Request message" />
             <button onclick="requestByInvite()">Add By Invite</button>
           </div>
-        </div>
+        </section>
       </div>
-      <div class="sidebar-foot">Connected via SSE realtime stream.</div>
     </aside>
 
     <main class="main">
-      <div class="main-head">
+      <header class="main-head">
         <div>
-          <div id="chatTitle" style="font-weight:700;">Select a friend</div>
-          <div id="chatSubtitle" class="muted" style="font-size:12px;">Pick a friend on the left to view the conversation.</div>
+          <div id="chatTitle" class="head-title">Select a friend</div>
+          <div id="chatSubtitle" class="head-sub">Pick a friend on the left to open the conversation.</div>
         </div>
-        <div class="row" style="align-items:center;">
-          <input id="discoverTarget" placeholder="User ID from discovery" style="width:260px;" />
-          <button class="secondary" onclick="sendRequestByUserID()">Add Friend</button>
-        </div>
-      </div>
+        <div class="head-sub">Realtime sync via SSE</div>
+      </header>
 
-      <div id="chatStream" class="chat-stream">
+      <section id="chatStream" class="chat-stream">
         <div class="muted">No conversation selected.</div>
-      </div>
+      </section>
 
-      <div class="chat-input">
+      <footer class="composer">
         <input id="chatInput" placeholder="Type a message..." />
         <button onclick="sendMessage()">Send</button>
-      </div>
+      </footer>
     </main>
   </section>
 
@@ -281,8 +312,13 @@
     let es = null;
 
     function esc(s) { return String(s || '').replace(/[&<>"']/g, c => ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":'&#39;'}[c])); }
+
+    async function getJSON(url) {
+      const r = await fetch(url, {headers: {'Accept': 'application/json'}});
+      return await r.json();
+    }
     async function postJSON(url, body) {
-      const r = await fetch(url, {method:'POST', headers:{'Content-Type':'application/json'}, body:JSON.stringify(body)});
+      const r = await fetch(url, {method: 'POST', headers: {'Content-Type': 'application/json'}, body: JSON.stringify(body)});
       return await r.json();
     }
 
@@ -318,6 +354,7 @@
       const discovery = latestState.discovery || [];
       const byID = {};
       discovery.forEach(u => byID[u.user_id] = u);
+
       if (!selectedFriend && friends.length) selectedFriend = friends[0].user_id;
       if (selectedFriend && !friends.find(f => f.user_id === selectedFriend)) selectedFriend = friends[0] ? friends[0].user_id : '';
 
@@ -325,14 +362,14 @@
         const u = byID[f.user_id] || {};
         const name = u.username || f.alias || f.user_id;
         const active = f.user_id === selectedFriend ? 'active' : '';
-        return `<button class="friend-item ${active}" onclick="selectFriend('${f.user_id}')"><div style="font-weight:600;">${esc(name)}</div><div class="muted" style="font-size:12px;">${esc(f.user_id)}</div></button>`;
-      }).join('') || `<div class="muted" style="padding:10px 12px;">No friends yet.</div>`;
+        return `<button class="friend-item ${active}" onclick="selectFriend('${f.user_id}')"><div class="name">${esc(name)}</div><div class="sub">${esc(f.user_id)}</div></button>`;
+      }).join('') || '<div class="muted" style="padding:12px;">No friends yet.</div>';
       document.getElementById('friendList').innerHTML = html;
     }
 
     function renderRequests() {
       const reqs = (latestState.requests || []).filter(r => r.status === 'pending_in');
-      const html = reqs.map(r => `<div class="req-item"><div style="font-weight:600;">${esc(r.from_name || r.from_user_id)}</div><div class="muted" style="font-size:12px;">${esc(r.message || '')}</div><div class="row" style="margin-top:8px;"><button onclick="respondRequest('${r.request_id}', true)">Accept</button><button class="danger" onclick="respondRequest('${r.request_id}', false)">Reject</button></div></div>`).join('') || `<div class="muted" style="padding:10px 12px;">No pending requests.</div>`;
+      const html = reqs.map(r => `<div class="req-item"><div style="font-weight:600;">${esc(r.from_name || r.from_user_id)}</div><div class="muted" style="font-size:12px;margin-top:2px;">${esc(r.message || '')}</div><div class="row" style="margin-top:8px;"><button onclick="respondRequest('${r.request_id}', true)">Accept</button><button class="danger" onclick="respondRequest('${r.request_id}', false)">Reject</button></div></div>`).join('') || '<div class="muted" style="padding:12px;">No pending requests.</div>';
       document.getElementById('requestList').innerHTML = html;
     }
 
@@ -346,7 +383,7 @@
 
       if (!selectedFriend) {
         document.getElementById('chatTitle').textContent = 'Select a friend';
-        document.getElementById('chatSubtitle').textContent = 'Pick a friend on the left to view the conversation.';
+        document.getElementById('chatSubtitle').textContent = 'Pick a friend on the left to open the conversation.';
         document.getElementById('chatStream').innerHTML = '<div class="muted">No conversation selected.</div>';
         return;
       }
@@ -387,6 +424,15 @@
       };
     }
 
+    async function loadInitialState() {
+      try {
+        const state = await getJSON('/api/social/v1/state');
+        applyState(state);
+      } catch (_) {
+        switchView(false);
+      }
+    }
+
     async function submitInit() {
       setInitMessage('Initializing...', false);
       const res = await postJSON('/api/social/v1/init', {
@@ -403,7 +449,7 @@
         setInitMessage(res.error, true);
         return;
       }
-      setInitMessage('Initialized. Connecting...', false);
+      setInitMessage('Initialized.', false);
     }
 
     async function submitUnlock() {
@@ -413,7 +459,7 @@
         setInitMessage(res.error, true);
         return;
       }
-      setInitMessage('Unlocked. Connecting...', false);
+      setInitMessage('Unlocked.', false);
     }
 
     async function saveConfig() {
@@ -466,6 +512,7 @@
       input.value = '';
     }
 
+    loadInitialState();
     connectSSE();
   </script>
 </body>
