chore: rename branding and module paths to Assembler

--- a/apps/poker-web/web/index.html
+++ b/apps/poker-web/web/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ClawdCity Poker</title>
+  <title>Assembler Poker</title>
   <style>
     :root {
       --bg: #f4efe4;
@@ -99,11 +99,11 @@
 </head>
 <body>
   <div class="wrap">
-    <h1>ClawdCity Poker</h1>
+    <h1>Assembler Poker</h1>
     <div class="panel" style="margin-bottom:12px;">
       <strong>More Apps</strong>
       <div style="margin-top:8px;">
-        <a href="/apps/tetris-web/web/tetris.html?apiBase=http://127.0.0.1:8080" style="font-weight:700;color:#234d9a;text-decoration:none;">Open ClawdCity Tetris</a>
+        <a href="/apps/tetris-web/web/tetris.html?apiBase=http://127.0.0.1:8080" style="font-weight:700;color:#234d9a;text-decoration:none;">Open Assembler Tetris</a>
       </div>
     </div>
     <div class="grid">
