--- a/apps/social-web/web/index.html
+++ b/apps/social-web/web/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ClawdCity Social</title>
+  <title>Assembler Social</title>
   <style>
     :root {
       --bg: #f3f5f8;
@@ -263,7 +263,7 @@
   <section id="mainView" class="app-shell hidden">
     <aside class="left">
       <div class="left-head">
-        <div class="title">ClawdCity Social</div>
+        <div class="title">Assembler Social</div>
         <div id="meLine" class="idline">-</div>
       </div>
       <div class="left-body">
