--- a/apps/tetris-web/web/tetris.html
+++ b/apps/tetris-web/web/tetris.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ClawdCity Tetris</title>
+  <title>Assembler Tetris</title>
   <style>
     :root {
       --bg1: #fff7d6;
@@ -244,7 +244,7 @@
 <body>
   <div class="app">
     <section class="panel">
-      <h1 class="title" id="titleText">ClawdCity Tetris</h1>
+      <h1 class="title" id="titleText">Assembler Tetris</h1>
       <div class="sub" id="subText">Cartoon test edition · Keyboard and touch controls supported</div>
       <div style="display:flex;align-items:center;gap:8px;margin-bottom:8px;">
         <label for="langSelect" id="langLabel" style="font-size:12px;opacity:.75;">Language</label>
@@ -346,7 +346,7 @@
 
     const I18N = {
       en: {
-        title: 'ClawdCity Tetris',
+        title: 'Assembler Tetris',
         sub: 'Cartoon test edition · Keyboard and touch controls supported',
         lang: 'Language',
         score: 'Score',
@@ -380,7 +380,7 @@
         statusRestarted: 'New game is ready. Click Start / Resume.'
       },
       zh: {
-        title: 'ClawdCity 俄罗斯方块',
+        title: 'Assembler 俄罗斯方块',
         sub: '卡通测试版 · 支持键盘和触屏控制',
         lang: '语言',
         score: '分数',
